force-app/main/default/objects/driver__c/driver__c.object-meta.xml
<CustomObject>
    <label>Driver</label>
    <nameField>
        <label>Driver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drivers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>