force-app/main/default/objects/driver__c/fields/constructor__c.field-meta.xml
<CustomField>
    <fullName>Constructor__c</fullName>
    <description>Value does not exist or does not match filter criteria.</description>
    <label>Constructor</label>
    <referenceTo>constructor__c</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>