force-app/main/default/objects/driver__c/fields/dateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>dateOfBirth__c</fullName>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>