force-app/main/default/objects/driver__c/fields/Driver_standing__c.field-meta.xml
<CustomField>
    <fullName>Driver_standing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver standing</label>
    <referenceTo>driverstanding__c</referenceTo>
    <relationshipLabel>Drivers</relationshipLabel>
    <relationshipName>Drivers</relationshipName>
    <type>Lookup</type>
</CustomField>