force-app/main/default/objects/driver__c/fields/givenName__c.field-meta.xml
<CustomField>
    <fullName>givenName__c</fullName>
    <label>Given Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>