force-app/main/default/objects/driver__c/fields/permanentNumber__c.field-meta.xml
<CustomField>
    <fullName>permanentNumber__c</fullName>
    <label>Permanent Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>